objects/OmniContactFunctionCreateTrial__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Storing mapping of Contact Function  logic population - Omni Trial -
Custom Segment will be sent to OLC for Submit Entitlement</description>
    <fields>
        <fullName>Bu_Segment__c</fullName>
        <description>Bu_Segment__c   from Account</description>
        <label>Bu Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Function_Value__c</fullName>
        <description>Value to be sent to Contact Function</description>
        <label>Contact Function(Value to be sent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_to_Contact_Function__c</fullName>
        <description>Mapping to Contact Function - Display purpose - Not used in Code</description>
        <label>Mapping to Contact Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Omni Contact Function Create Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bu_Segment__c</columns>
        <columns>Contact_Function_Value__c</columns>
        <columns>Mapping_to_Contact_Function__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>